--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
 </div>
 </div>
 <!-- improt baner-->
-<div class="baner" style="background-image:url('./assets/image/background.png') ;">
-  <div class="baner-logo1" style="background-image: url('./assets/image/1024px-Zara_Logo\ 1.png');"></div>
-<div class="baner-logo2" style="background-image: url('./assets/image/1024px-Zara_Logo\ 2.png');"></div>
+<div class="baner">
+  <div class="baner-logo1"></div>
+<div class="baner-logo2"></div>
 <div class="baner-content">
   Lustrous yet understated. The new evening wear collection exclusively offered at the reopened Giorgio Armani boutique in Los Angeles.
 </div>
